--- a/src/app/shared/menu/menu.component.css
+++ b/src/app/shared/menu/menu.component.css
@@ -31,6 +31,7 @@
     height: 50px;
     border-radius: 50%;
     transition: all 0.2s ease-in-out;
+    background-color: black;
 }
 .img_profile:hover{
     cursor: pointer;
@@ -51,10 +52,6 @@
         font-size: medium;
         color: azure;
     }
-    
-    
-   
-      
     
 }
 .link_btn {
